<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="285dp"
        android:layout_height="380dp"
        android:orientation="vertical"
        android:background="@color/zc_bg"
        >

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/title"
            android:textSize="@dimen/text_size30px"
            android:textColor="@color/dl_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/content1"
            android:textSize="@dimen/text_size24px"
            android:textColor="@color/textcolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/content2"
            android:textSize="@dimen/text_size24px"
            android:textColor="@color/textcolor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:paddingLeft="3dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/action"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/text_size24px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/action2"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/text_size24px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/action3"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/text_size24px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/action4"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/text_size24px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/action5"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/text_size24px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/action6"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/text_size24px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/action7"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/text_size24px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/action8"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/text_size24px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:paddingLeft="3dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/content3"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/text_size24px"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</RelativeLayout>