<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include
        android:id="@+id/include"
        layout="@layout/head"/>


    <RelativeLayout
        android:layout_below="@+id/include"
        android:background="@color/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/tx_top"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/dl_bg">

            <TextView
                android:id="@+id/tx_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_left24px"
                android:layout_marginLeft="@dimen/margin_left24px"
                android:text="@string/bczdktx"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size26px"/>

            <TextView
                android:id="@+id/tx_sum"
                android:text="611111"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/tx_tip"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size80px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/tx_xian2"
                android:layout_alignParentBottom="true"
                style="@style/xian"/>
        </RelativeLayout>
        <View
            android:id="@+id/tx_xian3"
            android:layout_below="@id/tx_top"
            android:layout_marginTop="8dp"
            style="@style/xian"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/tx_jine"
            android:layout_below="@+id/tx_xian3"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@color/zc_bg">


            <EditText
                android:id="@+id/et_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:background="@null"
                android:hint="@string/qsrtxje"
                android:textColorHint="@color/cccolor"
                android:textColor="@color/textcolor"
                android:layout_marginLeft="@dimen/margin_left24px"/>

            <TextView
                android:id="@+id/tx_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:textSize="@dimen/text_size30px"
                android:text="@string/mssf"
                android:textColor="@color/dl_bg"
                android:layout_marginRight="@dimen/margin_right24px"
                />
        </LinearLayout>
        <View
            android:id="@+id/tx_xian4"
            android:layout_below="@id/tx_jine"
            style="@style/xian"/>
        <View
            android:id="@+id/tx_xian5"
            android:layout_marginTop="8dp"
            android:layout_below="@id/tx_xian4"
            style="@style/xian"/>
        
        <RelativeLayout
            android:id="@+id/tx_zh"
            android:background="@color/zc_bg"
            android:layout_below="@+id/tx_xian5"
            android:layout_width="match_parent"
            android:layout_height="44dp">
            <TextView
                android:text="@string/zhxx"
                style="@style/MyTextStyle"/>


            <View
                android:layout_alignParentBottom="true"
                style="@style/xian"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tx_dh"
            android:layout_below="@+id/tx_zh"
            android:background="@color/zc_bg"
            android:layout_width="match_parent"
            android:layout_height="44dp">
            
            <TextView
                style="@style/MyTextStyle"
                android:text="@string/dh"/>
            
            <TextView
                android:id="@+id/tx_phone"
                style="@style/MyRightTextStyle"/>

            <View
                android:layout_alignParentBottom="true"
                style="@style/xian"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tx_xm"
            android:layout_below="@+id/tx_dh"
            android:background="@color/zc_bg"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                style="@style/MyTextStyle"
                android:text="@string/xm"/>

            <TextView
                android:id="@+id/tx_name"
                style="@style/MyRightTextStyle"/>

            <View
                android:layout_alignParentBottom="true"
                style="@style/xian"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tx_kh"
            android:layout_below="@+id/tx_xm"
            android:background="@color/zc_bg"
            android:layout_width="match_parent"
            android:layout_height="44dp">

            <TextView
                style="@style/MyTextStyle"
                android:text="@string/kh"/>

            <TextView
                android:id="@+id/tx_card"
                style="@style/MyRightTextStyle"/>

            <View
                android:layout_alignParentBottom="true"
                style="@style/xian"/>
        </RelativeLayout>
        
        <LinearLayout
            android:id="@+id/tx_tip1"
            android:layout_below="@+id/tx_kh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@mipmap/icon_wxts"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tx_tip1"
                android:gravity="bottom"
                android:layout_marginBottom="1dp"
                android:textSize="@dimen/text_size24px"
                android:textColor="@color/tips"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:id="@+id/tx_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tx_time"
                android:gravity="bottom"
                android:layout_marginBottom="1dp"
                android:textSize="@dimen/text_size24px"
                android:textColor="@color/dl_bg"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tx_tip2"
                android:gravity="bottom"
                android:layout_marginBottom="1dp"
                android:textSize="@dimen/text_size24px"
                android:textColor="@color/tips"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="7dp"
            android:layout_below="@+id/tx_tip1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tx_tip3"
                android:gravity="bottom"
                android:layout_marginBottom="1dp"
                android:textSize="@dimen/text_size24px"
                android:textColor="@color/tips"
                android:layout_marginLeft="33dp"/>

            <TextView
                android:id="@+id/tx_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tx_num"
                android:gravity="bottom"
                android:layout_marginBottom="1dp"
                android:textSize="@dimen/text_size24px"
                android:textColor="@color/dl_bg"
                />
        </LinearLayout>

        <Button
            android:id="@+id/tx_sure"
            android:background="@drawable/dl_btn_selector"
            android:text="@string/qrtx"
            android:textSize="@dimen/text_size40px"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="@dimen/margin_left24px"
            android:layout_marginRight="@dimen/margin_right24px"/>
    </RelativeLayout>


</RelativeLayout>