<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.jdyy.ytwp.views.NoScrollViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <View
        android:id="@+id/main_xian"
        style="@style/xian"/>
    <RadioGroup
        android:id="@+id/rg_menu"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bg">

        <RadioButton
            android:id="@+id/rb_home"
            android:padding="3dp"
            android:drawableTop="@drawable/rb_home_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/home"
            android:checked="true"
            android:textColor="@drawable/rb_text_selector"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size24px"
            />

        <RadioButton
            android:id="@+id/rb_invest"
            android:padding="3dp"
            android:drawableTop="@drawable/rb_market_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/market"
            android:textColor="@drawable/rb_text_selector"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size24px"
        />

        <RadioButton
            android:id="@+id/rb_market"
            android:button="@null"
            android:padding="3dp"
            android:text="@string/invest"
            android:drawableTop="@drawable/rb_invest_selector"
            android:gravity="center"
            android:textColor="@drawable/rb_text_selector"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="@dimen/text_size24px"
            android:layout_height="match_parent"/>

        <RadioButton
            android:id="@+id/rb_find"
            android:button="@null"
            android:padding="3dp"
            android:text="@string/find"
            android:drawableTop="@drawable/rb_find_selector"
            android:gravity="center"
            android:textColor="@drawable/rb_text_selector"
            android:layout_weight="1"
            android:textSize="@dimen/text_size24px"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

        <RadioButton
            android:id="@+id/rb_me"
            android:button="@null"
            android:padding="3dp"
            android:drawableTop="@drawable/rb_me_selector"
            android:text="@string/me"
            android:gravity="center"
            android:textColor="@drawable/rb_text_selector"
            android:layout_weight="1"
            android:textSize="@dimen/text_size24px"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    </RadioGroup>

</LinearLayout>