<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/textcolor">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="18dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/qx"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xzsjjg"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"

            android:textSize="18dp"
            android:textColor="@color/dl_bg"
            android:text="@string/qd2"/>
    </RelativeLayout>

    <com.jdyy.ytwp.wight.WheelView
        android:id="@+id/WV_species"
        android:layout_width="match_parent"
        android:layout_height="150dp"/>
</LinearLayout>